fix side-by-side view, improve readability of removed code in diffs

--- a/gitweb.css
+++ b/gitweb.css
@@ -506,12 +506,12 @@ div.diff.from_file {
 }
 
 div.diff.rem {
-        color: #E20000;
+        color: #F95D6A;
         background-color: #333333;
 }
 
 div.diff.rem span.marked {
-	color: #E20000;
+	color: #F95D6A;
         background-color: #333333;
 }
 
@@ -541,7 +541,7 @@ div.diff.incomplete {
 
 div.diff.nodifferences {
         font-weight: bold;
-        color: #600000;
+        color: #F95D6A;
 }
 
 /* side-by-side diff */
@@ -561,16 +561,16 @@ div.chunk_block div.new {
 }
 
 div.chunk_block.rem div.old div.diff.rem {
-        background-color: #fff5f5;
+        background-color: #333333;
 }
 div.chunk_block.add div.new div.diff.add {
-        background-color: #f8fff8;
+        background-color: #333333;
 }
 div.chunk_block.chg div     div.diff {
-        background-color: #fffff0;
+        background-color: #333333;
 }
 div.chunk_block.ctx div     div.diff.ctx {
-        color: #404040;
+        color: #FCFBF9;
 }
 
 div.index_include {
